# raspi-os

./: .Cargo.toml.swp  .README.md.un~  .aarch64-raspi3.ld.un~  .gitignore  .out.swp  .ycm_extra_conf.py  Cargo.toml  Makefile  README.md  aarch64-raspi3-symbol.ld  aarch64-raspi3.ld  aarch64-unknown-none.json  blah  broke.txt  debug.gdb  devices  dis  dump.hex  dump.txt  gdb-trace-3.txt  kernel8.img  layout  log.txt  mem.txt  out  package-lock.json  release.gdb  rust-gdb  session.vim  tables.mem  types  vcpkg-configuration.json  works.txt
.cargo/: config
gdb-scripts/: ll_alloc.py
programs/: Makefile  exit.s
programs/asm/: write.s
src/: .main.rs.un~  Cargo.toml  aarch64.rs  allocator.rs  canvas.rs  device.rs  elf.rs  filesystem.rs  main.rs  panic.rs  platform.rs  sync.rs  utils.rs  volatile.rs
src/aarch64/: cpu.rs  interrupt.rs  math.rs  math.s  mmu.rs  registers.rs  syscall.rs
src/aarch64/registers/: accessors.rs  mpidr_el1.rs  sp.rs
src/allocator/: buddy_alloc.rs  id_allocator.rs  ll_alloc.rs  page_allocator.rs
src/canvas/: .line.rs.swp  .line.rs.un~  canvas2d.rs  line.rs  line.rs~  matrix.rs  vector.rs
src/device/: console.rs  sector_device.rs  timer.rs
src/filesystem/: fat32.rs  master_boot_record.rs
src/platform/: qemu.rs  raspi3.rs
src/platform/qemu/: start.rs  start.s  uart.rs
src/platform/raspi3/: .gpio.rs.swp  .gpu.rs.un~  .mailbox.rs.un~  .start.rs.swp  .start.rs.un~  .start.s.un~  .uart.rs.swp  .uart.rs.un~  clock.rs  emmc.rs  exception.rs  (+26 more)
src/utils/: bit_array.rs  bitfield.rs  fat_name.rs  math.rs
traces/: trace1.txt  trace2.txt
(+5 files in other folders)
