[package]
name = "graph_os"
version = "0.1.0"
edition = "2021"
authors = ["Moe Frumkin <moegf1@gmail.com>"]

[features]

default = []

qemu = []
raspi3 = []


[dependencies]
paste = "1.0.8"

[profile.dev]

[profile.release]
panic="abort"

[target.aarch64-unknown-none]
rustflags = ["-C", "link-arg=-Taarch64-raspi3.ld"]

[build]
target = "aarch64-unknown-none"
